# tunneldrop

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/superpowers/: SIDECAR.md
docs/superpowers/plans/: 2026-06-14-local-remote-share.md
sample/: sample-share.txt
site/: index.html
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: demo.rs  serve_local.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  password.rs  server.rs  state.rs  token.rs  tunnel.rs
tests/: fake_cloudflared.sh  fake_cloudflared_nourl.sh
