# NOTE: Cargo.lock pins alloc-no-stdlib = 2.0.4 to resolve a brotli transitive
# version conflict (two incompatible alloc-no-stdlib versions in one build) pulled
# in via tauri-utils. Only run `cargo update -p alloc-no-stdlib` if `cargo build`
# still passes afterward.
[package]
name = "local-remote-share"
version = "0.1.0"
edition = "2021"

[lib]
name = "local_remote_share_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8"
hex = "0.4"
argon2 = "0.5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
