# NOTE: Cargo.lock pins alloc-no-stdlib = 2.0.4 to resolve a brotli transitive
# version conflict (two incompatible alloc-no-stdlib versions in one build) pulled
# in via tauri-utils. Only run `cargo update -p alloc-no-stdlib` if `cargo build`
# still passes afterward.
[package]
name = "tunneldrop"
version = "1.0.1"
edition = "2021"

[lib]
name = "tunneldrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }

# Self-update: the updater plugin downloads & verifies signed releases; the
# process plugin provides relaunch() so the app can restart after installing.
# Desktop-only, but this app is desktop-only so no cfg gate is needed in Cargo.
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8"
hex = "0.4"
argon2 = { version = "0.5", features = ["std"] }
anyhow = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["blocking"] }
